@@ -794,7 +794,7 @@
             <fileset dir="${ivy.lib.dir}" includes="commons-io-*.jar"/>
             <fileset dir="${ivy.lib.dir}" includes="commons-logging-*.jar"/>
             <fileset dir="${ivy.lib.dir}" includes="httpcore-*.jar"/>
-            <fileset dir="${ivy.lib.dir}" includes="log4j-*.jar"/>
+            <fileset dir="${ivy.lib.dir}" includes="reload4j-*.jar"/>
             <fileset dir="${ivy.lib.dir}" includes="slf4j-*.jar"/>
         </copy>
     </target>
@@ -826,7 +826,7 @@
             <fileset dir="${ivy.lib.dir}" includes="commons-logging-*.jar"/>
             <fileset dir="${ivy.lib.dir}" includes="httpclient-*.jar"/>
             <fileset dir="${ivy.lib.dir}" includes="httpcore-*.jar"/>
-            <fileset dir="${ivy.lib.dir}" includes="log4j-*.jar"/>
+            <fileset dir="${ivy.lib.dir}" includes="reload4j-*.jar"/>
             <fileset dir="${ivy.lib.dir}" includes="slf4j-*.jar"/>
             <fileset dir="${ivy.lib.dir}" includes="re2j-*.jar"/>
             <fileset dir="${ivy.lib.dir}" includes="woodstox-core-*.jar"/>
