@@ -62,10 +62,10 @@ kryo.version=3.0.3
 rhino.version=1.7R2
 antlr.version=3.4
 stringtemplate.version=4.0.4
-log4j.version=1.2.16
 rats-lib.version=0.5.1
-slf4j-api.version=1.6.1
-slf4j-log4j12.version=1.6.1
+slf4j-api.version=1.7.36
+slf4j-reload4j.version=1.7.36
+reload4j.version=1.2.24
 spark1.version=1.6.1
 spark2.version=2.4.8
 xerces.version=2.10.0
